# ReverbGen

./: .editorconfig  CMakeLists.txt  README.md
Docs/: Automatic Generation of Environmental Reverb Data.docx
Docs/Assets/: Absorption Coefficients.xlsx  Chart 01.xlsx  Chart 02.xlsx  Chart 03.xlsx  Chart 04.xlsx  Image 01.cdr  Image 02.cdr  Image 03.cdr  Image 04.cdr
Source/: ReverbGen.cpp  ReverbGen.h  RgHistogram.h  RgInternal.h
Test/: Main.cpp  TestHistogram.cpp  TestSignatures.cpp
